diesel_compile_tests/tests/fail/derive_deprecated/deprecated_changeset_options.stderr
error: unexpected end of input, expected parentheses
  --> tests/fail/derive_deprecated/deprecated_changeset_options.rs:21:3
   |
21 | #[changeset_options]
   |   ^^^^^^^^^^^^^^^^^

error: unexpected end of input, expected identifier
  --> tests/fail/derive_deprecated/deprecated_changeset_options.rs:29:20
   |
29 | #[changeset_options()]
   |                    ^^

error: expected `treat_none_as_null`
  --> tests/fail/derive_deprecated/deprecated_changeset_options.rs:37:21
   |
37 | #[changeset_options(what)]
   |                     ^^^^

error: unexpected end of input, expected `=`
       help: The correct format looks like `#[diesel(treat_none_as_null = true)]`
  --> tests/fail/derive_deprecated/deprecated_changeset_options.rs:45:21
   |
45 | #[changeset_options(treat_none_as_null)]
   |                     ^^^^^^^^^^^^^^^^^^

error: expected boolean literal
  --> tests/fail/derive_deprecated/deprecated_changeset_options.rs:53:42
   |
53 | #[changeset_options(treat_none_as_null = "what")]
   |                                          ^^^^^^
